--- a/hfish.cabal
+++ b/hfish.cabal
@@ -22,7 +22,7 @@ executable hfish
   build-depends:       base >=4.9 && <4.10, text >=1.2 && <1.3, containers >=0.5 && <0.6, lens >=4.15 && <4.16, directory >=1.2 && <1.3, mtl >=2.2 && <2.3, process >=1.4 && <1.5, temporary >=1.2 && <1.3, filepath >=1.4 && <1.5, regex-applicative >=0.3 && <0.4, trifecta >=1.6 && <1.7, ansi-wl-pprint >=0.6 && <0.7, unix >=2.7 && <2.8, haskeline >=0.7 && <0.8, optparse-applicative >=0.13 && <0.14, scientific >=0.3 && <0.4, parsers >=0.12 && <0.13, attoparsec >=0.13 && <0.14, random >=1.1 && <1.2
   
   if flag(splitparser)
-    build-depends:     fish-parser >=0.1 && <0.2 
+    build-depends:     hfish-parser >=0.1 && <0.2 
   
   default-language:    Haskell2010
   
