--- a/hfish.cabal
+++ b/hfish.cabal
@@ -19,7 +19,7 @@ executable hfish
   main-is:             Main.hs
   -- other-modules:       
   other-extensions:    TemplateHaskell, RankNTypes, GeneralizedNewtypeDeriving, LambdaCase, OverloadedStrings
-  build-depends:       base >=4.9 && <4.10, text >=1.2 && <1.3, containers >=0.5 && <0.6, lens >=4.15 && <4.16, directory >=1.2 && <1.3, mtl >=2.2 && <2.3, process >=1.4 && <1.5, temporary >=1.2 && <1.3, filepath >=1.4 && <1.5, regex-applicative >=0.3 && <0.4, trifecta >=1.6 && <1.7, ansi-wl-pprint >=0.6 && <0.7, unix >=2.7 && <2.8, haskeline >=0.7 && <0.8, optparse-applicative >=0.13 && <0.14, scientific >=0.3 && <0.4, parsers >=0.12 && <0.13, attoparsec >=0.13 && <0.14, random >=1.1 && <1.2, bytestring >= 0.10.8 && < 0.11, unix-bytestring >= 0.3.7 && < 0.4, word8 >= 0.1.2 && < 0.2, text-icu >= 0.7.0 && < 0.8
+  build-depends:       base >=4.9 && <4.10, text >=1.2 && <1.3, containers >=0.5 && <0.6, lens >=4.15 && <4.16, directory >=1.2 && <1.3, mtl >=2.2 && <2.3, process >=1.4 && <1.5, temporary >=1.2 && <1.3, filepath >=1.4 && <1.5, regex-applicative >=0.3 && <0.4, trifecta >=1.6 && <1.7, ansi-wl-pprint >=0.6 && <0.7, unix >=2.7 && <2.8, haskeline >=0.7 && <0.8, optparse-applicative >=0.13 && <0.14, scientific >=0.3 && <0.4, parsers >=0.12 && <0.13, attoparsec >=0.13 && <0.14, random >=1.1 && <1.2, bytestring >= 0.10.8 && < 0.11, unix-bytestring >= 0.3.7 && < 0.4, word8 >= 0.1.2 && < 0.2, text-icu >= 0.7.0 && < 0.8, fish-lang >= 0.1.0 && < 0.2
   
   if flag(splitparser)
     build-depends:     hfish-parser >=0.1 && <0.2 
