--- a/build
+++ b/build
@@ -9,5 +9,6 @@ git clone https://github.com/xaverdh/fish-lang
 cd hfish
 cabal sandbox init
 cabal sandbox add-source ../posix-fd-io ../nfc-text ../fish-lang ../fish-parser ../hfish-parser
+sed -i -E 's/^[[:space:]]*version[[:space:]]*=[[:space:]]*".*"$/version = "'$(git log -1 --pretty=format:%H)'"/' HFish/Interpreter/Version.hs
 cabal install --ghc-option=-threaded
 
