--- a/build
+++ b/build
@@ -1,14 +1,14 @@
 #!/bin/sh
 
+git clone https://gitlab.com/hfish-shell/hfish
+cd hfish
 git clone https://gitlab.com/hfish-shell/posix-fd-io
 git clone https://gitlab.com/hfish-shell/nfc-text
-git clone https://gitlab.com/hfish-shell/hfish
 git clone https://gitlab.com/hfish-shell/hfish-parser
 git clone https://gitlab.com/hfish-shell/fish-parser
 git clone https://gitlab.com/hfish-shell/fish-lang
-cd hfish
 cabal sandbox init
-cabal sandbox add-source ../posix-fd-io ../nfc-text ../fish-lang ../fish-parser ../hfish-parser
+cabal sandbox add-source posix-fd-io nfc-text fish-lang fish-parser hfish-parser
 command -v nproc > /dev/null \
   && cabal install --bindir . --ghc-options="-threaded -j$(nproc)" \
   || cabal install --bindir . --ghc-option=-threaded
