--- a/hfish.cabal
+++ b/hfish.cabal
@@ -15,8 +15,38 @@ executable hfish
   main-is:             Main.hs
   -- other-modules:       
   other-extensions:    TemplateHaskell, RankNTypes, GeneralizedNewtypeDeriving, LambdaCase, OverloadedStrings
-  build-depends:       base >=4.9 && <4.10, text >=1.2 && <1.3, containers >=0.5 && <0.6, lens >=4.15 && <4.16, directory >= 1.3.0 && < 1.4, mtl >=2.2 && <2.3, process >=1.4 && <1.5, temporary >=1.2 && <1.3, filepath >=1.4 && <1.5, regex-applicative >=0.3 && <0.4, trifecta >=1.6 && <1.7, ansi-wl-pprint >=0.6 && <0.7, unix >=2.7 && <2.8, haskeline >=0.7 && <0.8, optparse-applicative >=0.13 && <0.14, scientific >=0.3 && <0.4, parsers >=0.12 && <0.13, attoparsec >=0.13 && <0.14, random >=1.1 && <1.2, bytestring >= 0.10.8 && < 0.11, GenericPretty >= 1.2.1 && < 1.3, pretty >= 1.1.3 && < 1.2, deepseq >= 1.4.2 && < 1.5, hashable >= 1.2.4 && < 1.3, unordered-containers >= 0.2.7 && < 0.3, gitrev >= 1.2.0 && < 1.3
-  build-depends:       posix-fd-io >= 0.1.0 && < 0.2, fish-lang >= 0.1.0 && < 0.2, fish-parser >=0.1 && <0.2, hfish-parser >=0.1 && <0.2, nfc-text >= 0.1.0 && < 0.2
+  build-depends:       base                 >=4.9 && <4.10
+  build-depends:       text                 >=1.2 && <1.3
+  build-depends:       containers           >=0.5 && <0.6
+  build-depends:       lens                 >=4.15 && <4.16
+  build-depends:       directory            >= 1.3.0 && < 1.4
+  build-depends:       mtl                  >=2.2 && <2.3
+  build-depends:       process              >=1.4 && <1.5
+  build-depends:       temporary            >=1.2 && <1.3
+  build-depends:       filepath             >=1.4 && <1.5
+  build-depends:       regex-applicative    >=0.3 && <0.4
+  build-depends:       trifecta             >=1.6 && <1.7
+  build-depends:       ansi-wl-pprint       >=0.6 && <0.7
+  build-depends:       unix                 >=2.7 && <2.8
+  build-depends:       haskeline            >=0.7 && <0.8
+  build-depends:       optparse-applicative >=0.13 && <0.14
+  build-depends:       scientific           >=0.3 && <0.4
+  build-depends:       parsers              >=0.12 && <0.13
+  build-depends:       attoparsec           >=0.13 && <0.14
+  build-depends:       random               >=1.1 && <1.2
+  build-depends:       bytestring           >= 0.10.8 && < 0.11
+  build-depends:       GenericPretty        >= 1.2.1 && < 1.3
+  build-depends:       pretty               >= 1.1.3 && < 1.2
+  build-depends:       deepseq              >= 1.4.2 && < 1.5
+  build-depends:       hashable             >= 1.2.4 && < 1.3
+  build-depends:       unordered-containers >= 0.2.7 && < 0.3
+  build-depends:       gitrev               >= 1.2.0 && < 1.3
+  build-depends:       posix-fd-io          >= 0.1.0 && < 0.2
+  build-depends:       fish-lang            >= 0.1.0 && < 0.2
+  build-depends:       fish-parser          >=0.1 && <0.2
+  build-depends:       hfish-parser         >=0.1 && <0.2
+  build-depends:       nfc-text             >= 0.1.0 && < 0.2
+  build-depends:       extra                >= 1.5.3 && < 1.6
   
   default-language:    Haskell2010
 
