--- a/build
+++ b/build
@@ -5,10 +5,11 @@ cd hfish
 git clone https://gitlab.com/hfish-shell/posix-fd-io
 git clone https://gitlab.com/hfish-shell/nfc-text
 git clone https://gitlab.com/hfish-shell/hfish-parser
+git clone https://gitlab.com/hfish-shell/hfish-interpreter
 git clone https://gitlab.com/hfish-shell/fish-parser
 git clone https://gitlab.com/hfish-shell/fish-lang
 cabal sandbox init
-cabal sandbox add-source posix-fd-io nfc-text fish-lang fish-parser hfish-parser
+cabal sandbox add-source posix-fd-io nfc-text fish-lang fish-parser hfish-parser hfish-interpreter
 command -v nproc > /dev/null \
   && cabal install --bindir . --ghc-options="-threaded -j$(nproc)" \
   || cabal install --bindir . --ghc-option=-threaded
