--- a/hfish.cabal
+++ b/hfish.cabal
@@ -19,6 +19,7 @@ executable hfish
   other-modules:       HFish.Main.Interactive
   other-modules:       HFish.Startup
   other-modules:       HFish.Types
+  other-modules:       HFish.Utils
   other-modules:       HFish.Dispatch
 
   other-extensions:    TemplateHaskell
