--- a/hfish.cabal
+++ b/hfish.cabal
@@ -20,6 +20,7 @@ executable hfish
   other-modules:       HFish.Main.NonInteractive
   other-modules:       HFish.Startup
   other-modules:       HFish.Types
+  other-modules:       HFish.Debug
   other-modules:       HFish.Utils
   other-modules:       HFish.Dispatch
 
